--- a/home.html
+++ b/home.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="home.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>    
+    <link href="https://fonts.googleapis.com/css2?family=Qwitcher+Grypen:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -42,7 +45,7 @@
     <h2>Top Travel Destinations</h2>
     <div class="destinations-grid">
         <div class="destination-card">
-            <img src="puri.jfif" alt="Puri">
+            <img src="Assets/jagannth temple.jpg" alt="Puri">
             <div class="destination-content">
                 <h3>Puri, Bhubaneswar</h3>
                 <p>Puri, also known as, Jagannath Puri, is a coastal city and a municipality in the state of Odisha in eastern India.</p>
@@ -78,6 +81,92 @@
         </div>
     </div>
 </section>
+
+
+                                        <!-- PACKAGES SECTION START -->
+
+<section class="packages-section">
+    <h1>popular packages</h1>
+    <div class="packages-grid">
+        <div class="packages-card">
+            <p>Ganjam package</p>
+            <img src="Assets/ganjam.jpg" alt="Ganjam">
+            <a href="ganjampackage.html" class="book">BOOK now</a>
+        </div>
+    </div>
+    <div class="packages-grid">
+        <div class="packages-card">
+            <p>Nature's Paradise: Koraput</p>
+            <img src="Assets/koraput.jfif" alt="koraput">
+            <a href="koraput.html" class="book">BOOK now</a>
+        </div>
+    </div>
+    <div class="packages-grid">
+        <div class="packages-card">
+            <p>puri </p>
+            <img src="Assets/jagannth temple.jpg" alt="puri">
+            <a href="puripackage.html" class="book">BOOK now</a>
+        </div>
+    </div>
+    <div class="packages-grid">
+        <div class="packages-card">
+            <p>sambulpur</p>
+            <img src="Assets/sambulpur.jpg" alt="sambulpur">
+            <a href="sambulpur.html" class="book">BOOK now</a>
+        </div>
+    </div>
+</section>
+ 
+
+
+
+<section id="services">
+    <h2>Our Services</h2>
+    <div class="service">
+        <h3>Custom Travel Packages</h3>
+        <p>We create personalized travel packages tailored to your preferences and budget.</p>
+    </div>
+    <div class="service">
+        <h3>24/7 Customer Support</h3>
+        <p>Our team is available around the clock to assist you with any inquiries or issues.</p>
+    </div>
+    <div class="service">
+        <h3>Travel Insurance</h3>
+        <p>We offer comprehensive travel insurance options to keep you safe during your trip.</p>
+    </div>
+</section>
+
+
+<footer id="footer">
+    <div class="footer-container">
+        <div class="footer-section">
+            <h3>About Us</h3>
+            <p>We are dedicated to providing the best travel experiences for our customers.</p>
+        </div>
+        <div class="footer-section">
+            <h3>Quick Links</h3>
+            <ul>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#gallery">Traveler Stories</a></li>
+                <li><a href="#contact">Contact Us</a></li>
+                <li><a href="#faq">FAQs</a></li>
+            </ul>
+        </div>
+        <div class="footer-section">
+            <h3>Contact Us</h3>
+            <p>Email: info@example.com</p>
+            <p>Phone: +1 234 567 890</p>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        <p>&copy; 2024 Travel Planning Website. All rights reserved.</p>
+    </div>
+</footer>
+
+
+
+
+
 
     
 </body>
