change in first page

--- a/home.html
+++ b/home.html
@@ -18,6 +18,8 @@
         <div class="logo">
             <img src="Assets/mayurbg.png" alt="Logo">
         </div>
+
+       
         <div class="navbar">
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -29,8 +31,8 @@
         </div>
         <div class="hero-content">
             <div class="text">
-                <h1>Welcome to Our Travel Planning Service</h1>
-                <p>Your adventure begins here!</p>
+                <h1>Explore the ODISHA  with Us</h1>
+            <p>Your dream vacation is just a click away. Choose from top destinations and personalized packages.</p>
                 <div class="search-bar">
                     <input type="text" placeholder="Search for destinations, packages...">
                     <button>Search</button>
