--- a/Bus/bus.html
+++ b/Bus/bus.html
@@ -3,14 +3,12 @@
     <title>trip to odisha</title> 
     <link rel="stylesheet" href="bus.css"> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-  <link 
-    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&family=Poppins:wght@400;500;600;700&display=swap" 
-    rel="stylesheet"> 
-    <link rel="stylesheet" href= "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"integrity= "sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="crossorigin="anonymous" referrerpolicy="no-referrer" />
+   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-     
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons-core.min.css" integrity="sha512-OmevVDECSDeo7M4G+Nvh0+VLVGS2XnEOkXWJcJ0TRom3GpGgc/ryQIgpRZw20mb5eR2U0sqsm33MaR8yD1zdsQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head> 
 <body> 
  
@@ -107,20 +105,19 @@
                 </tr>                 
                 <!-------------fifth row-----------------> 
                 <tr class=""> 
-                    <td > <br>   
-                    <input type="checkbox">Person With Disability Concession<br> 
-                  <input type="checkbox">Flexible With Date<br> 
+                    <td > <br>                     
+                    <input type="checkbox">One Way<br>
                         </td> 
                     <td> 
-                    <input type="checkbox">One way<br> 
                     <input type="checkbox">Round Trip<br> 
+                     
                     </td>                    
                 </tr> 
                 <tr> 
                     <td><br>                   
                    </td> 
                     <td>                          
-                <button class="muna"> Search</button>                        
+                <a href="#scrollspyHeading2"><button class="muna"> Search</button> </a>                       
                     </td>                    
                 </tr>                                
             </table>            
@@ -233,7 +230,8 @@
     <button class="click">28</button> 
     <button class="click">32</button> 
     <button class="click">37</button> 
-  </div> 
+  </div>
+  <center><a href="book form/registrationform.html"><button class="muna" id="puja">book now</button></a></center>
 </div> 
 </section> 
 <section id="scrollspyHeading4">
@@ -245,7 +243,7 @@
       <div class="social-bar"> 
         <ul> 
           <li> 
-            <a href=""><i class="fab fa-facebook-f"></i></a> 
+            <i class="fab fa-facebook-f"></i>
           </li> 
           <li> 
             <i class="fab fa-twitter"></i> 
@@ -261,7 +259,7 @@
     </div> 
     <div class="header"> 
       <h1>Let's Get Started</h1> 
-      <h2>Contact us to start your next project!</h2> 
+      <!-- <h2>Contact us to start your next project!</h2>  -->
     </div> 
     <div class="address"> 
       <i class="fas fa-map-marker-alt"></i> 
@@ -280,7 +278,7 @@
       <form> 
         <input type="text" placeholder="Name"> 
         <input type="email" placeholder="Email"> 
-        <textarea rows="4" placeholder="Tell us about your project..."></textarea> 
+        <textarea rows="4" placeholder="Send message..."></textarea> 
         <button type="button">SEND</button> 
       </form> 
     </div> 
@@ -328,6 +326,6 @@
 </div> 
 </footer> 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> 
-<a href="book form/registrationform.html"><button>book now</button></a>
+
 </body> 
 </html>
