add java script in my page

--- a/Bus/book form/registrationform.html
+++ b/Bus/book form/registrationform.html
@@ -10,8 +10,8 @@
         <form action="#" method="post">
             <p>Full Name:</p>
             <input type="text" name="fullname" placeholder="Full Name">
-            <p>User Name:</p>
-            <input type="text" name="username" placeholder="User Name">
+            <p>Last name:</p>
+            <input type="text" name="lastname" placeholder="lastname">
             <p>mobile:</p>
             <input type="text" name="phone" placeholder="phone number">
             <p>Email:</p>
