--- a/Bus/bus.html
+++ b/Bus/bus.html
@@ -13,7 +13,7 @@
 <body> 
  
    <!--header start----------------------------------------------------------------------------------------> 
- 
+ <script src="bus.js"></script>
    <nav id="navbar-example2" class="navbar navbar-light bg-light px-3"> 
     <div class="button-container"> 
     <a class="navbar-brand" style="font-size: 30px;color: #03045e;">Book Bus</a> 
