--- a/signup.html
+++ b/signup.html
@@ -77,25 +77,25 @@
         <form id="signupForm" onsubmit="return validateForm()">
             <div class="form-group">
                 <label for="fullname">Full Name</label>
-                <input type="text" id="fullname" name="fullname" placeholder="Enter your full name">
+                <input type="text" id="fullname" name="fullname" placeholder="Enter your full name" required>
                 <div class="error" id="nameError"></div>
             </div>
 
             <div class="form-group">
                 <label for="email">Email Address</label>
-                <input type="email" id="email" name="email" placeholder="Enter your email">
+                <input type="email" id="email" name="email" placeholder="Enter your email" required>
                 <div class="error" id="emailError"></div>
             </div>
 
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" id="password" name="password" placeholder="Enter your password">
+                <input type="password" id="password" name="password" placeholder="Enter your password" required>
                 <div class="error" id="passwordError"></div>
             </div>
 
             <div class="form-group">
                 <label for="confirmPassword">Confirm Password</label>
-                <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm your password">
+                <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm your password" required>
                 <div class="error" id="confirmPasswordError"></div>
             </div>
 
